fix: メンバー削除APIでもuser idをパスパラメータとして受け取るように変更
